# dfw

./: .dockerignore  .editorconfig  .gitignore  .gitlab-ci.yml  .travis.yml  .yamllint  CHANGELOG.md  CNAME  Cargo.toml  Dockerfile  Dockerfile.build  Dockerfile.testing  LICENSE-MIT  MIGRATION-v0.x-to-v1.0.md  README.md  RELEASING.md  bors.toml  build.rs  cargo_run_as_root.sh  conf.toml  docker-compose.yml  index.html  release.toml
.github/: dependabot.yml  no-response.yaml
.github/workflows/: cargo-audit.yml  cargo-bloat.yml  ci.yml  ci.yml.disabled  docker.yml  docker.yml.disabled  gh-pages.yml  gh-pages.yml.disabled  it.yml  it.yml.disabled  releases.yml  releases.yml.disabled  ssh-test.yml
0.5.0/: search-index.js  source-files.js
0.5.0/dfw/: index.html
0.5.0/dfw/errors/: enum.DFWError.html  type.Result.html
0.5.0/dfw/iptables/: enum.IPVersion.html  index.html  struct.IPTablesDummy.html  struct.IPTablesLogger.html  struct.IPTablesRestore.html  trait.IPTables.html
0.5.0/dfw/process/: enum.ContainerFilter.html  index.html  struct.ProcessDFW.html  struct.ProcessingOptions.html
0.5.0/dfw/types/: index.html  struct.ContainerDNAT.html  struct.ContainerDNATRule.html  struct.ContainerToContainer.html  struct.ContainerToContainerRule.html  struct.ContainerToHost.html  struct.ContainerToHostRule.html  struct.ContainerToWiderWorld.html  struct.ContainerToWiderWorldRule.html  struct.DFW.html  struct.Defaults.html  struct.ExposePort.html  struct.ExposePortBuilder.html  struct.Initialization.html  struct.WiderWorldToContainer.html  struct.WiderWorldToContainerRule.html
0.5.0/dfw/util/: fn.load_file.html  fn.load_path.html  sidebar-items.js
0.5.0/src/dfw/: iptables.rs.html  lib.rs.html  process.rs.html  types.rs.html
0.5.1/: aliases.js  search-index.js
0.5.1/dfw/: all.html  index.html  sidebar-items.js
0.5.1/dfw/errors/: enum.DFWError.html  index.html
0.5.1/dfw/iptables/: index.html  sidebar-items.js  struct.IPTablesDummy.html  struct.IPTablesLogger.html  struct.IPTablesRestore.html  trait.IPTables.html
0.5.1/dfw/process/: enum.ContainerFilter.html  index.html  sidebar-items.js  struct.ProcessDFW.html  struct.ProcessingOptions.html
0.5.1/dfw/types/: index.html  sidebar-items.js  struct.ContainerDNAT.html  struct.ContainerDNATRule.html  struct.ContainerToContainer.html  struct.ContainerToHost.html  (+11 more)
1.0.0/: search-index.js  source-files.js
1.0.0/dfw/: all.html
1.0.1/: search-index.js
1.1.0/: search-index.js
1.1.0/dfw/: all.html
1.2.0/: search-index.js
1.2.0-rc.2/: search-index.js
1.2.0-rc.3/dfw/: trait.FirewallBackend.html
1.2.0-rc.4/: search-index.js
1.2.0-rc.6/: settings.html
1.2.0-rc.6/dfw/: trait.FirewallBackend.html
1.2.0/dfw/: trait.FirewallBackend.html
1.2.1/: search-index.js
1.2.1/dfw/: all.html  index.html  trait.FirewallBackend.html
1.3.0-rc.1/dfw/: all.html  index.html  sidebar-items.js  trait.FirewallBackend.html
1.3.0-rc.2/: search-index.js  settings.html  src-files.js
1.3.0-rc.2/dfw/: all.html  sidebar-items.js
docs/: GETTING-STARTED-iptables.md  GETTING-STARTED-nftables.md  TROUBLESHOOTING.md
docs/migration/: v0.x-to-v1.0.md  v0.x-to-v1.2.md  v1.x-to-v1.2.md
examples/: README.md
examples/full-path/: README.md
examples/full-single-file/: README.md  dfw.toml
examples/minimal/: README.md
examples/reverseproxy/: README.md  dfw.toml  docker-compose.yml
git/hooks/: pre-commit
hack/: check-license-headers.sh  deploy-github-pages.sh  extract-current-changelog.py
main/: crates.js  help.html  search-index.js  settings.html  source-files.js
main/dfw/: all.html  index.html  sidebar-items.js  trait.FirewallBackend.html
master/: search-index.js  settings.html  source-files.js
master/dfw/: all.html  index.html  sidebar-items.js  trait.FirewallBackend.html
multiplatformtest/: Dockerfile
resources/test/: 01_conf.toml  conf-file.toml
src/: de.rs  dfwrs.rs  docker.rs  errors.rs  iptables.rs  lib.rs  main.rs  nftables.rs  process.rs  rule.rs  types.rs  util.rs
src/iptables/: mod.rs  process.rs  rule.rs  types.rs
src/nftables/: mod.rs  process.rs  rule.rs  types.rs
tests/: dfw.rs  dfwrs.rs  iptables_dummy.rs  iptables_logger.rs  logline.rs  types.rs
tests/common/: mod.rs
tests/logs/: mod.rs
(+716 files in other folders)
