[package]
name = "dfw"
version = "1.2.2-alpha.0"
edition = "2018"
authors = ["Pit Kleyersburg <pitkley@googlemail.com>"]
license = "MIT/Apache-2.0"
description = "Docker firewall framework, in Rust"
homepage = "https://github.com/pitkley/dfw"
repository = "https://github.com/pitkley/dfw.git"
readme = "README.md"

categories = ["command-line-interface", "command-line-utilities"]
keywords = ["cli", "docker", "firewall"]

include = [
    "**/*.rs",
    "resources/**/*",
    "Cargo.toml",
    "LICENSE-*",
]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
clap = "^2.33"
crossbeam-channel = "^0.5"
derive_builder = "^0.9"
failure= "^0.1"
futures = "^0.3"
glob = "^0.3"
lazy_static = "^1"
libc = "^0.2"
serde = { version = "^1", features = ["derive"] }
signal-hook = "^0.3"
shiplift = "^0.7"
slog = { version = "^2", features = ["max_level_trace"] }
sloggers = "^1.0"
strum = { version = "^0.20", features = ["derive"] }
tempfile = "^3.2"
time = "^0.2"
tokio = "^1.3"
toml = "^0.5"
url = "^2.2"

[dev-dependencies]
eval = "^0.4"
itertools = "0.10.0"
lazy_static = "^1"
regex = "^1"
paste = "1.0.5"

[build-dependencies]
version-compare = "^0.0.11"

[[bin]]
name = "dfw"
path = "src/bin/dfw.rs"
doc = false

[features]
docker-tests = []

[profile.release]
lto = true
codegen-units = 1
incremental = false

