[package]
name = "dfw"
version = "1.3.0-rc.1"
edition = "2021"
authors = ["Pit Kleyersburg <pitkley@googlemail.com>"]
license = "MIT/Apache-2.0"
description = "Docker firewall framework, in Rust"
homepage = "https://github.com/pitkley/dfw"
repository = "https://github.com/pitkley/dfw.git"
readme = "README.md"

categories = ["command-line-interface", "command-line-utilities"]
keywords = ["cli", "docker", "firewall"]

include = [
    "**/*.rs",
    "resources/**/*",
    "Cargo.toml",
    "LICENSE-*",
]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
bollard = "^0.13"
clap = { version = "^3.2", features = ["cargo", "derive"] }
crossbeam-channel = "^0.5"
derive_builder = "^0.11"
failure= "^0.1"
futures = "^0.3"
glob = "^0.3"
lazy_static = "^1"
libc = "^0.2"
maplit = "^1"
serde = { version = "^1", features = ["derive"] }
signal-hook = "^0.3"
slog = { version = "^2", features = ["max_level_trace"] }
sloggers = "^2.1"
strum = { version = "^0.24", features = ["derive"] }
tempfile = "^3.3"
time = { version = "^0.3", features = ["formatting"] }
tokio = "^1.21"
toml = "^0.6"
url = "^2.3"

[dev-dependencies]
eval = "^0.4"
itertools = "0.10.5"
lazy_static = "^1"
regex = "^1"
paste = "1.0.9"

[build-dependencies]
version-compare = "^0.1.0"

[[bin]]
name = "dfw"
path = "src/bin/dfw.rs"
doc = false

[features]
docker-tests = []

[profile.release]
lto = true
codegen-units = 1
incremental = false

